--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         <activity android:name=".Pdfview" />
         <activity android:name=".QuarterList" />
         <activity android:name=".Layunin" />
+        <activity android:name=".Quiz.QuizActivity" android:exported="true" />
+        <activity android:name=".Quiz.ResultActivity" android:exported="true" />
+
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
