--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileApp">
-        <activity
-            android:name=".Quiz.ResultActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Quiz.QuizActivity"
-            android:exported="true" />
+        <activity android:name=".Quiz.ResultActivity" android:exported="true" />
+        <activity android:name=".Quiz.QuizActivity" android:exported="true" />
         <activity android:name=".TopicList" />
         <activity android:name=".Pdfview" />
         <activity android:name=".QuarterList" />
