Suplemental 1 & 2 Quiz completed at kwarter 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileApp">
         <activity
+            android:name=".Quiz.QuizType3"
+            android:exported="true" />
+        <activity
             android:name=".Quiz.QuizType2"
             android:exported="true" />
         <activity
